# excel-string-extractor

./: .gitignore  AUTHORS  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  README.rst  activate.bat  clean.bat  flake.bat  requirements.txt  requirements_dev.txt  setup.backup.py  setup.cfg  tox.ini
lab/: args.note  conf.example.json  conf.template.json  conf.template.xlsx
project/: .$ARGS.drawio.bkp  ARGS.drawio  COMMANDS  LABELS  NOTE  TODO
src/exsextractor/: __init__.py  __main__.py  args.py  config.py  exsextractor.py  input.py
src/exsextractor/stuff/: __init__.py  stuff.py
src/exsextractor/template/: conf.template.json  conf.template.xlsx
src/exsextractor/utils/: __init__.py  utils.py
tests/: conf.example-1.json  conf.example-1.xlsx  conf.example-2.json  conf.example-2.xlsx  test_args.py  test_exsextractor.py  test_stuff.py  test_utils.py  ~$conf.example-1.xlsx
