[metadata]
name = exsextractor
version = 1.0.0
description = exsextractor is a Python script that scans Excel and CSV files, extracting all strings from every cell and consolidating them into one or more output files.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/JoeFerri/excel-string-extractor
author = Giuseppe Ferri
author_email = jfinfoit@gmail.com
license = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = 
	exsextractor
	exsextractor.utils
package_dir =
    =src
python_requires = >=3.11
install_requires =
    openpyxl >= 3.1.2

[options.packages.find]
exclude = tests*

[options.extras_require]
dev =
    pytest>=8.0.0
    twine>=4.0.0
	flake8>=6.0.0
	tox>=4.12.0
	
[flake8]
max-line-length = 160